# analyzer

./: CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt  docker-compose.yml
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  analyzer.cpp  analyzer.hpp
scripts/: entrypoint.sh
test/: CMakeLists.txt  TestDummy.cpp  test_analyzer.cpp
